Fix issue with space in file name

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /DisplayTest
 /ExeTest
+public/Images/DISPLAY 6-14-21.jpg
+public/Images/SCREEN SHOT AISIN JUNE 2021.jpg
+public/Images/TOYOTOMI.jpg
